applications/nginx/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "200"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
