applications/nginx/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
  type: NodePort
